# ai-health-frontend

./: README.md  config-overrides.js  nft-logic-test.md  package-lock.json  package.json  setup_database.sql  test-api.js
ai-health-management-main/: README.md  package-lock.json  package.json  pom.xml
ai-health-management-main/docs/: V1_user.sql  V2.sql  V3.sql  structure.md
docs/: Mental_Health_3D_Chat_Demo.md
public/chick/: scene.gltf
src/: App.tsx  index.tsx
src/components/: AdminMint.tsx  CalorieComparisonChart.tsx  DietaryDataDisplay.tsx  DietaryForm.tsx  DietarySummary.tsx  ExerciseAIChatBox.css  ExerciseAIChatBox.tsx  ExerciseCompactList.tsx  ExerciseForm.tsx  ExerciseRecommendation.tsx  ExerciseReminders.tsx  HealthArticles.tsx  MentalHealthAdviceModal.tsx  NFTGallery.tsx  NFTStatistics.tsx  NFTWalletInteraction.tsx  Notifications.tsx  Panda3D.tsx  ProtectedRoute.tsx  SimplifiedExerciseCard.tsx  UserNFTManager.tsx  UserProfileForm.tsx  WalletConnect.tsx  WeeklyExerciseRecommendation.tsx  WeeklyExerciseSummary.tsx
src/config/: wallet.ts
src/context/: AuthContext.tsx  DietContext.tsx  ExerciseContext.tsx  MentalHealthContext.tsx  UserContext.tsx
src/contracts/: nft.ts
src/layouts/: DashboardLayout.tsx  dashboardLayout.css
src/pages/: Diet.tsx  ExercisePage.tsx  Home.tsx  Login.tsx  MentalHealthAssessment.tsx  MentalHealthChat.tsx  MentalHealthSupport.tsx  NFTAdmin.tsx  NFTIncentive.tsx  Settings.tsx  (+2 more)
src/programs/health-nft/: Anchor.toml  Cargo.toml
src/programs/health-nft/idl/: health_nft.json
src/programs/health-nft/src/: lib.rs
(+62 files in other folders)
